autopwn v0.9.4 - 20150415

* Added option to specify assessments directory

autopwn v0.9.3 - 20150415

* Added timezone info to logs
* Modified parallel option in tool configs to booleans

autopwn v0.9.2 - 20150415

* Greater than and less than rules now work

autopwn v0.9.1 - 20150409

* Fixed bad bug where redirection locations were being used as
  targets (had to shell=True the Popen(), will fix properly
  sometime)
* Added stdout option to tool configs. If a stdout log should
  be generated for a tool, then "stdout: True" should be specified,
  if the tool output is being redirected to a file already,
  "stdout: False" should be used so an empty stdout isn't created

autopwn v0.9 - 20150408

* autopwn global configuration file added
 - parallel option (overrides assessment config option)
 - scripts_directory (directory containing tools)
   (currently does nothing)
* screen support
* Split tool stdout and stderr into logs
 - Tools no longer require redirection nonsense

autopwn v0.8 - 20150320

* Changed target file format (had to happen)
* Included URL path option
* Bug fixes

autopwn v0.7 - 20150320

* Added rulesets to tools
* Added pre and post tool execution options
* Started work on (limited) Python code convention adherence
* Added new tools and assessments
* Various bug fixes